test/tests/errors/error-if-exp-ref-off7.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = true ? 1 : ref "";
}